src/theme/global.scss
/* For information on how to create your own theme, please see:
http://ionicframework.com/docs/theming/ */

:root {
  --search-color: #22f3bc;
  --diff-added-color: green;
  --diff-removed-color: red;
  --editor-background: #f5f5f3;
  --editor-text-color: #2e2e2e;
}

.ion-palette-dark {
  --search-color: #004634;
  --editor-background: #1f1f23;
  --editor-text-color: #c9ccd1;
}

::highlight(kiwimeri-search-results),
::highlight(kiwimeri-content-search-results),
::highlight(kiwimeri-deep-search-results) {
  background-color: var(--search-color);
}

// TODO cleanup

ion-toolbar.slim {
  --min-height: 36px;
}

ion-input.invisible,
ion-textarea.invisible {
  --highlight-color-focused: rgba(var(--highlight-color-focused), 0);
}

ion-list.wrapper-list {
  ion-item {
    --padding-start: 0px;
    --padding-end: 0px;
    --inner-padding-end: -16px;
    --ion-safe-area-right: -16px;
  }
}
ion-list.inner-list {
  width: 100%;
  padding: 0;

  ion-item {
    --padding-start: 4px;
    --padding-end: 4px;
  }
}

ion-item.inner-item {
  --padding-start: 4px;
  --padding-end: 4px;
  --inner-padding-end: 0px;
}

ion-item.inner-item-slim {
  --padding-start: 0px;
  --padding-end: 0px;
  --inner-padding-end: 0px;
}
ion-icon.slim[slot='start'] {
  margin-inline-end: 18px;
}

ion-header.subheader {
  /* fix breadcrumb in light mode on android */
  background: var(--ion-color-primary-contrast, #fff);
  -webkit-box-shadow:
    0 2px 4px -2px rgba(0, 0, 0, 0.8) inset,
    0 2px 4px -1px rgba(0, 0, 0, 0.2),
    0 4px 5px 0 rgba(0, 0, 0, 0.14),
    0 1px 10px 0 rgba(0, 0, 0, 0.12);
  box-shadow:
    0 2px 4px -2px rgba(0, 0, 0, 0.6) inset,
    0 2px 4px -1px rgba(0, 0, 0, 0.2),
    0 4px 5px 0 rgba(0, 0, 0, 0.14),
    0 1px 10px 0 rgba(0, 0, 0, 0.12);
}

ion-breadcrumb::part(native),
ion-breadcrumb::part(collapsed-indicator) {
  padding: 0;
}
ion-breadcrumb::part(collapsed-indicator) {
  margin: 0;
  width: 22px;
}
ion-breadcrumb {
  ion-button {
    margin: 0;
  }
  ion-button::part(native) {
    padding: 0;
  }
}

ion-modal.auto-height {
  --height: auto;
}

ion-popover.larger-width {
  --width: 70%;
}

